Set correct size & spacing on nav menu

--- a/web/style.css
+++ b/web/style.css
@@ -11,7 +11,7 @@ header {
     width: 100%;
     height: 30px; /*66.6px*/
     font-size: 30px;
-    color: #f5f5f5;
+    color: hsl(0, 0%, 96%);
     background-color: hsl(120, 37.4%, 61.2%);
     padding: 1rem;
 }
@@ -61,9 +61,10 @@ nav {
     left: 0;
     right: 0;
     z-index: 1;
-    width: 200px;
-    height: 200px;
+    width: fit-content;
+    height: fit-content;
     background-color: hsl(120, 37.4%, 61.2%);
+    padding: 20px;
 }
 
 ul {
@@ -71,22 +72,27 @@ ul {
     justify-content: space-evenly;
     flex-direction: column;
     justify-content: flex-start;
+    gap: 10px;
     padding: 0;
     margin: 0;
+    width: fit-content;
+    height: fit-content;
 }
 
 nav li {
     list-style-type: none;
     /* margin-right: auto; */
     font-size: 1.75rem;
+    width: fit-content;
+    height: fit-content;
 
     a {
-        /* color: lightskyblue; */
+        color: hsl(0, 0%, 96%);
         text-decoration: none;
     }
 
     & :hover {
-        /* color: hsl(203, 92%, 50%);; */
+        color: hsl(0, 0%, 55%);
     }
 }
 
